REST endpoints for event