@@ -1,13 +1,22 @@
 package com.baribir.events.service.impl;
 
 import com.baribir.events.dto.EventDto;
+import com.baribir.events.dto.UserDto;
+import com.baribir.events.entity.Category;
 import com.baribir.events.entity.Event;
+import com.baribir.events.entity.User;
+import com.baribir.events.mapper.UserMapper;
+import com.baribir.events.repository.CategoryRepository;
 import com.baribir.events.repository.EventRepository;
+import com.baribir.events.repository.UserRepository;
 import com.baribir.events.service.EventService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 @Service
@@ -15,20 +24,18 @@ import java.util.UUID;
 public class EventServiceImpl implements EventService {
 
     private final EventRepository repository;
+    private final CategoryRepository categoryRepository;
+    private final UserMapper userMapper;
+    private final UserRepository userRepository;
 
     @Override
-    public List<Event> getEvents() {
-        return List.of();
-    }
-
-    @Override
-    public Event getById(Long id) {
-        return null;
+    public Event getById(UUID id) {
+        return repository.getReferenceById(id);
     }
 
     @Override
     public Event save(Event event) {
-        return null;
+        return repository.save(event);
     }
 
     @Override
@@ -37,17 +44,36 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
-    public List<Event> getEventsByParams(String name, String date, String location) {
-        return List.of();
+    public List<Event> getEventsByParams(Map<String, String> params) {
+        String dateStr = params.get("date");
+        String categoryCode = params.get("category");
+        String interestsStr = params.get("interests");
+
+        LocalDate eventDate = (dateStr != null && !dateStr.isEmpty()) ? LocalDate.parse(dateStr) : null;
+        List<Category> categories = (categoryCode != null && !categoryCode.isEmpty())
+                ? categoryRepository.findByCodeWithChildren(categoryCode)
+                : null;
+        List<String> interests = (interestsStr != null && !interestsStr.isEmpty())
+                ? Arrays.asList(interestsStr.split(","))
+                : null;
+
+        return repository.findEventsByParams(categories, interests, eventDate);
     }
 
     @Override
-    public List<Event> findByCategory(Long categoryId) {
-        return List.of();
+    public List<Event> findByCategoryAndDate(String date, String category) {
+        LocalDate dateIso = LocalDate.parse(date);
+        List<Category> cats = categoryRepository.findByCodeWithChildren(category);
+        return repository.findByCategoryInAndDate(cats, dateIso);
     }
 
     @Override
-    public List<Event> findAll() {
-        return repository.findAll();
+    public List<Event> getPopular() {
+        return repository.getPopular();
+    }
+
+    @Override
+    public List<UserDto> getEventUsers(UUID eventId) {
+        return userMapper.toDto(repository.findUsersByEvent(eventId));
     }
 }
